--- a/public/css/style.css
+++ b/public/css/style.css
@@ -117,9 +117,7 @@ hr {
 .navbar-default .navbar-nav > .active > a:focus {
   background-color: transparent;
 }
-.navbar-default .navbar-nav > .active > a:after,
-.navbar-default .navbar-nav > .active > a:hover:after,
-.navbar-default .navbar-nav > .active > a:focus:after {
+.navbar-default .navbar-nav > .active > a:hover:after {
   display: block !important;
   position: absolute !important;
   left: 0 !important;
@@ -133,8 +131,21 @@ hr {
 .navbar-toggle {
   border-radius: 0;
 }
-.navbar-logo {
+.navbar-logo-mobile {
   height: 50px;
+}
+@media (max-width: 768px) {
+  .navbar-logo-mobile {
+    display: none;
+  }
+}
+.navbar-logo-desktop {
+  height: 50px;
+}
+@media (min-width: 768px) {
+  .navbar-logo-desktop {
+    display: none;
+  }
 }
 .navbar-default .navbar-toggle:hover,
 .navbar-default .navbar-toggle:focus {
@@ -255,6 +266,9 @@ header .intro-text-shade {
 header .intro-text-shade img{
   max-width: 100%;
 }
+header .header-button{
+  padding: 20px;
+}
 /* Features Section */
 #features {
   background: #f6f6f6;
@@ -299,6 +313,12 @@ header .intro-text-shade img{
   list-style: none;
   padding: 0;
 }
+#about .about-alci {
+  float: right;
+  position: relative;
+  top: -10px;
+  width: 150px;
+}
 #about .about-text li:before {
   content: "\f00c";
   font-family: "FontAwesome";
@@ -307,13 +327,13 @@ header .intro-text-shade img{
   font-weight: 300;
   padding-right: 8px;
 }
-#about img {
+/*#about img {
   width: 520px;
   margin-top: 10px;
   background: #fff;
   border-right: 0;
   box-shadow: 0 0 50px rgba(0, 0, 0, 0.06);
-}
+}*/
 #about p {
   line-height: 24px;
   margin: 30px 0;
@@ -618,8 +638,26 @@ label {
   border-bottom: 2px solid #608dfd;
 }
 
-@media (max-width: 768px) {
+/*@media (max-width: 768px) {
   #about img {
     margin: 50px 0;
+  }
+}*/
+
+.phone img {
+  position: fixed;
+  bottom: 3vw;
+  right: 3vw;
+  display: block !important;
+  z-index: 99999;
+  height: 75px;
+  -webkit-filter: drop-shadow(5px 5px 5px #222);
+  filter: drop-shadow(5px 5px 5px #222);
+}
+@media (min-width: 768px) {
+  .phone img {
+    position: absolute;
+visibility:hidden;
+display:none;
   }
 }
